# invert-pdf-colors-cli

./: .gitignore  README.md  flake.nix  invert.py  main.py  mypython.py  pdfinvert.rb  py.py  pyproject.toml  sh.sh  tests.py
invertpdf/: main.py
